# pywikibot

./: .appveyor.yml  .codeclimate.yml  .codecov.yml  .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .gitreview  .pep8  .pre-commit-config.yaml  .rstcheck.cfg  .svnprops  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTENT.rst  COPYING  CREDITS  CREDITS.rst  ChangeLog  Dockerfile  Dockerfile-dev  HISTORY.rst  INSTALL  LICENSE  MANIFEST.in  README  README-conversion.rst  README-conversion.txt  README.md  README.rst  ROADMAP.rst  appveyor_install.ps1  call_pwb.py  conftest.py  dev-requirements.txt  distribute_setup.py  ez_setup.py  (+13 more)
.github/workflows/: doctest.yml  graalpy_tests.yml  lint_tests.yml  login_tests-ci.yml  oauth_tests-ci.yml  pre-commit.yml  pywikibot-ci.yml  sysop_tests-ci.yml  sysop_write_tests-ci.yml  windows_tests.yml  write_tests-ci.yml
docs/: .rstcheck.cfg  Makefile  SECURITY.rst  changelog.rst  compatibility.rst  conf.py  credits.rst  docutils.conf  entrypoint.rst  faq.rst  getting_help.rst  getting_started_contributors.rst  global_options.rst  glossary.rst  index.rst  installation.rst  introduction.rst  library_usage.rst  licenses.rst  make.bat  mwapi.rst  recipes.rst  requirements-py3.txt  requirements.txt  scripts.maintenance.rst
docs/_templates/: page.html
docs/api_ref/: bot.rst  bot_choice.rst  cosmetic_changes.rst  daemonize.rst  date.rst  date_time.rst  diff.rst  echo.rst  editor.rst  exceptions.rst  family.rst  fixes.rst  flow.rst  i18n.rst  i18n_plural.rst  index.rst  iw_interwiki_graph.rst  iw_titletranslate.rst  logentries.rst  logging.rst  login.rst  proofreadpage.rst  pywikibot.comms.rst  pywikibot.compat.rst  pywikibot.config.rst  pywikibot.data.rst  pywikibot.families.rst  pywikibot.page.rst  pywikibot.pagegenerators.rst  pywikibot.rst  pywikibot.site.rst  pywikibot.specialbots.rst  pywikibot.tools.rst  pywikibot.userinterfaces.rst  reader.rst  site_detect.rst  textlib.rst  throttle.rst  version.rst  x_backports.rst
docs/scripts/: administrative.rst  archive.rst  auxiliary.rst  categories.rst  general.rst  global.rst  images.rst  index.rst  main.rst  maintenance.rst  nonedit.rst  other.rst  outdated.rst  scripts.archive.rst  scripts.i18n.rst  scripts.maintenance.rst  scripts.rst  scripts.userscripts.rst  templates.rst  unsorted.rst  wikibase.rst
docs/scripts_ref/: index.rst  scripts.i18n.rst  scripts.maintenance.rst  scripts.rst  scripts.userscripts.rst
docs/tests/: archivebot_tests.rst  basepage_tests.rst  category_tests.rst  date_tests.rst  diff_tests.rst  dry_api_tests.rst  fixes_tests.rst  flow_thanks_tests.rst  generate_family_files_tests.rst  http_tests.rst  i18n.pywikibot.rst  interwiki_link_tests.rst  isbn_tests.rst  logentry_tests.rst  login_tests.rst  page_tests.rst  replacebot_tests.rst  template_bot_tests.rst  thread_tests.rst  weblib_tests.rst  wikibase_edit_tests.rst
docs/tests_ref/: add_text_tests.rst  api_tests.rst  archivebot_tests.rst  aspects.rst  basepage.rst  bot_tests.rst  cache_tests.rst  conftest.rst  (+96 more)
masti/: README
pywikibot/: CONTENT.rst  DIRECTORIES.rst  README-conversion.txt  README.rst  __init__.py  __metadata__.py  __wbtypes.py  _wbtypes.py  backports.py  bot.py  bot_choice.py  botirc.py  catlib.py  config.py  config2.py  cosmetic_changes.py  daemonize.py  date.py  diff.py  echo.py  editor.py  epydoc.cfg  exceptions.py  family.py  fixes.py  flow.py  i18n.py  interwiki_graph.py  logentries.py  logging.py  login.py  page.py  pagegenerators.py  plural.py  proofreadpage.py  site.py  site_detect.py  specialbots.py  textlib.py  throttle.py  (+8 more)
scripts/: CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.rst  __init__.py  _unlink.py  add_text.py  archivebot.py  archivebot_.py  basic.py  blockpageschecker.py  blockreview.py  capitalize_redirects.py  casechecker.py  catall.py  category.py  category_graph.py  category_redirect.py  cfd.py  change_pagelang.py  checkimages.py  claimit.py  clean_sandbox.py  commons_information.py  commons_link.py  commonscat.py  coordinate_import.py  cosmetic_changes.py  create_categories.py  create_isbn_edition.py  data_ingestion.py  dataextend.py  delete.py  delinker.py  disambredir.py  djvutext.py  download_dump.py  editarticle.py  featured.py  fixes.py  (+65 more)
scripts/archive/: README  README.rst  __init__.py  blockpageschecker.py  capitalize_redirects.py  casechecker.py  catall.py  cfd.py  commons_link.py  commonscat.py  compat2core.py  create_categories.py  data_ingestion.py  disambredir.py  editarticle.py  featured.py  flickrripper.py  followlive.py  freebasemappingupload.py  imagecopy.py  imagecopy_self.py  imageharvest.py  imagerecat.py  imageuncat.py  interwiki.py  isbn.py  lonelypages.py  makecat.py  match_images.py  ndashredir.py  nowcommons.py  patrol.py  piper.py  reflinks.py  replicate_wiki.py  script_wui.py  selflink.py  spamremove.py  standardize_interwiki.py  states_redirect.py  (+4 more)
scripts/maintenance/: README  __init__.py  addwikis.py  appveyor_python_setup.py  cache.py  colors.py  compat2core.py  diff_checker.py  download_dump.py  interwikidumps.py  make_i18n_dict.py  preload_sites.py  sorting_order.py  unidata.py  update_linktrails.py  update_script.py  wikimedia_sites.py
scripts/tests/: test_data_ingestion.py  test_utils.py
scripts/tests/data/: csv_ingestion.csv
scripts/userscripts/: __init__.py
tests/: README.rst  __init__.py  add_text_tests.py  api_tests.py  archivebot_tests.py  aspects.py  basepage.py  basepage_tests.py  basesite_tests.py  bot_tests.py  cache_tests.py  category_bot_tests.py  category_tests.py  checkimages_tests.py  citoid_tests.py  collections_tests.py  compat2core_tests.py  conftest.py  cosmetic_changes_tests.py  data_ingestion_tests.py  datasite_tests.py  date_tests.py  deletionbot_tests.py  deprecation_tests.py  diff_tests.py  disambredir_tests.py  djvu_tests.py  dry_api_tests.py  dry_site_tests.py  echo_tests.py  edit_failure_tests.py  edit_tests.py  eventstreams_tests.py  exceptions_tests.py  family_tests.py  file_tests.py  fixes_tests.py  fixing_redirects_tests.py  flow_edit_tests.py  flow_tests.py  (+94 more)
(+319 files in other folders)
