[build-system]
requires = ["packaging", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"pywikibot_scripts" = "scripts"}

[project]
name = "pywikibot-scripts"
version = "9.4.0"

authors = [
    {name = "xqt", email = "info@gno.de"},
]
maintainers = [
    {name = "The Pywikibot team", email = "pywikibot@lists.wikimedia.org"},
]
description = "Pywikibot Scripts Collection"
readme = "scripts/README.rst"
requires-python = ">=3.7.0"
dependencies = [
    "pywikibot >= 9.4.0.dev0",
    "isbnlib",
    "langdetect",
    "mwparserfromhell",
    "pydot",
    "requests",
    "unidecode",
]

keywords = [
    "add text", "archivebot", "basic", "bot", "client", "framework", "mediawiki",
    "pwb", "pybot", "python",
    "pywiki", "pywikibase", "pywikibot", "pywikipedia", "pywikipediabot",
    "replace", "redirect", "script", "scripts", "upload",
    "wiki", "wikibase", "wikidata", "wikimedia", "wikipedia",
]
license = {text = "MIT License"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Afrikaans",
    "Natural Language :: Arabic",
    "Natural Language :: Basque",
    "Natural Language :: Bengali",
    "Natural Language :: Bosnian",
    "Natural Language :: Bulgarian",
    "Natural Language :: Cantonese",
    "Natural Language :: Catalan",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Croatian",
    "Natural Language :: Czech",
    "Natural Language :: Danish",
    "Natural Language :: Dutch",
    "Natural Language :: English",
    "Natural Language :: Esperanto",
    "Natural Language :: Finnish",
    "Natural Language :: French",
    "Natural Language :: Galician",
    "Natural Language :: German",
    "Natural Language :: Greek",
    "Natural Language :: Hebrew",
    "Natural Language :: Hindi",
    "Natural Language :: Hungarian",
    "Natural Language :: Icelandic",
    "Natural Language :: Indonesian",
    "Natural Language :: Irish",
    "Natural Language :: Italian",
    "Natural Language :: Japanese",
    "Natural Language :: Javanese",
    "Natural Language :: Korean",
    "Natural Language :: Latin",
    "Natural Language :: Latvian",
    "Natural Language :: Lithuanian",
    "Natural Language :: Macedonian",
    "Natural Language :: Malay",
    "Natural Language :: Marathi",
    "Natural Language :: Nepali",
    "Natural Language :: Norwegian",
    "Natural Language :: Panjabi",
    "Natural Language :: Persian",
    "Natural Language :: Polish",
    "Natural Language :: Portuguese",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Romanian",
    "Natural Language :: Russian",
    "Natural Language :: Serbian",
    "Natural Language :: Slovak",
    "Natural Language :: Slovenian",
    "Natural Language :: Spanish",
    "Natural Language :: Swedish",
    "Natural Language :: Tamil",
    "Natural Language :: Telugu",
    "Natural Language :: Thai",
    "Natural Language :: Tibetan",
    "Natural Language :: Turkish",
    "Natural Language :: Ukrainian",
    "Natural Language :: Urdu",
    "Natural Language :: Vietnamese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.entry-points."pywikibot"]
scriptspath = "pywikibot_scripts:base_dir"

[project.urls]
Homepage = "https://www.mediawiki.org/wiki/Manual:Pywikibot"
Documentation = "https://doc.wikimedia.org/pywikibot/stable/"
Repository = "https://gerrit.wikimedia.org/r/plugins/gitiles/pywikibot/core/"
"GitHub Mirror" = "https://github.com/wikimedia/pywikibot"
Download = "https://www.pywikibot.org"
Changelog = "https://doc.wikimedia.org/pywikibot/master/changelog.html"
Tracker = "https://phabricator.wikimedia.org/tag/pywikibot/"
